--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:allowBackup="true"
+        android:name=".ui.application.AppConfig"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_tiffin_icon"
+        android:roundIcon="@mipmap/ic_tiffin_icon_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.TiffinBooking"
@@ -15,6 +17,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TiffinBooking">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
